Add bytebuddy WARN mute config